--- a/infrastructure/docker/mongo.yml
+++ b/infrastructure/docker/mongo.yml
@@ -12,11 +12,9 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     healthcheck:
-      test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs0',members:[{_id:0,host:'localhost:27017'}]}) }" | mongosh --port 27017 --quiet
+      test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs0',members:[{_id:0,host:'${MONGO_HOST:-localhost}:27017'}]}) }" | mongosh --port 27017 --quiet
       interval: 5s
-      timeout: 30s
-      start_period: 0s
-      retries: 30
+      retries: 3
 #    volumes:
 #      - "mongo1_data:/data/db"
 #      - "mongo1_config:/data/configdb"
@@ -27,4 +25,4 @@ services:
 
 networks:
   shared-network:
-    driver: bridge
+    external: true
