--- a/.golangci.yml
+++ b/.golangci.yml
@@ -72,11 +72,18 @@ issues:
       linters:
         - errcheck
         - gosec
+        - godot
+        - nilnil
     
     - path: ".*\\.gen\\.go$"
       linters:
         - all
     
+    # Allow stuttering for public types that are part of the API
+    - linters:
+        - revive
+      text: "stutters"
+      
     - path: vendor/
       linters:
         - all
