--- a/.golangci.yml
+++ b/.golangci.yml
@@ -30,6 +30,10 @@ linters:
     # Style
     - revive
     - stylecheck
+    - misspell    # Check for misspelled words
+    
+    # Complexity
+    - gocyclo     # Cyclomatic complexity
     
     # Documentation (stricter for libraries)
     - godot  # Comments should end with period
@@ -63,6 +67,9 @@ linters-settings:
     excludes:
       - G104
   
+  gocyclo:
+    min-complexity: 20  # Validation functions are often complex
+  
   stylecheck:
     checks: ["all", "-ST1000"]  # More strict for libraries
 
@@ -74,6 +81,7 @@ issues:
         - gosec
         - godot
         - nilnil
+        - gocyclo  # Test functions often have high complexity due to table-driven tests
     
     - path: ".*\\.gen\\.go$"
       linters:
