--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,11 @@ permissions:
   contents: write
 
 jobs:
+  ci:
+    uses: Sokol111/ecommerce-infrastructure/.github/workflows/go-ci.yml@master
+
   release:
+    needs: ci
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
