--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,37 +6,17 @@ on:
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
+      - 'VERSION'
       - 'docs/**'
   pull_request:
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
+      - 'VERSION'
       - 'docs/**'
 
 jobs:
-  check-version:
-    runs-on: ubuntu-latest
-    outputs:
-      skip: ${{ steps.check.outputs.skip }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
-      - name: Check if VERSION changed
-        id: check
-        run: |
-          CHANGED_FILES=$(git diff --name-only HEAD~1 HEAD)
-          if echo "$CHANGED_FILES" | grep -q "^VERSION$"; then
-            echo "skip=true" >> $GITHUB_OUTPUT
-            echo "⏭️ VERSION changed - skipping CI (release workflow will handle it)"
-          else
-            echo "skip=false" >> $GITHUB_OUTPUT
-            echo "✅ VERSION not changed - running CI"
-          fi
-
   ci:
-    needs: check-version
-    if: needs.check-version.outputs.skip != 'true'
     uses: Sokol111/ecommerce-infrastructure/.github/workflows/go-ci.yml@master
     with:
       coverage-threshold: 50
